myapp/myloadbalancer.yml
# LoadBalancer Service
# service/nginx-node.yml

---
apiVersion: v1
kind: Service
metadata:
  name: mywebapploadbalancer
  labels:
    service: nginx2

spec:
  selector:
    service: nginx
  type: LoadBalancer
  ports:
      - nodePort: 31000    # nodeport---visible outside
        port: 90           # service port
        targetPort: 80     # containerPort
