myapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp
  labels:
    service: nginx
spec:
  selector:
    service: nginx
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
